tests/neg/i1688b.scala
package java.lang

trait Byte // error
